Closed Bug 1723024 Opened 4 years ago Closed 4 years ago

js/src/jit/MacroAssembler.cpp:801:5: error: use of undeclared identifier 'storePrivateValue'

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox90 --- unaffected
firefox91 --- unaffected
firefox92 --- fixed

People

(Reporter: glandium, Assigned: zhaojiazhong-hf)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

When building for mips64el:

[task 2021-07-29T21:36:37.260Z] 21:36:37     INFO -  In file included from Unified_cpp_js_src_jit8.cpp:20:
[task 2021-07-29T21:36:37.261Z] 21:36:37    ERROR -  /builds/worker/checkouts/gecko/js/src/jit/MacroAssembler.cpp:801:5: error: use of undeclared identifier 'storePrivateValue'
[task 2021-07-29T21:36:37.262Z] 21:36:37     INFO -      storePrivateValue(temp, Address(obj, dataSlotOffset));
[task 2021-07-29T21:36:37.263Z] 21:36:37     INFO -      ^
[task 2021-07-29T21:36:37.263Z] 21:36:37     INFO -  1 error generated.

Thanks for your information, I will fix it later.

Set release status flags based on info from the regressing bug 1722674

Port D121068 to MIPS64 platform.

Assignee: nobody → zhaojiazhong-hf
Status: NEW → ASSIGNED
Pushed by jdemooij@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1b9b9e19cacc [MIPS64] Fix use of undeclared identifier 'storePrivateValue'. r=jandem
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: