Bug 1723024 - [MIPS64] Fix use of undeclared identifier 'storePrivateValue'. r=jandem

Port D121068 to MIPS64 platform.

Differential Revision: https://phabricator.services.mozilla.com/D121498